@@ -1,3 +1,6 @@
+2006-12-12 Pascal Charest <pascal.charest@gmail.com>
+	* install.php: Remove obsolete Phlickr installation references
+
 2006-12-12 Benoit Grégoire  <bock@step.polymtl.ca>
 	* install.php, Dependencies.php:  Centralize Dependency detection (next is to centralize 
 	dependency installation code).
